--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   },
   "homepage": "https://github.com/ObssaAhmed/tinyapp#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20"
   },
   "description": ""
